# rust-image-viewer

./: .gitignore  README.md  index.html  package-lock.json  package.json  plan.md  tsconfig.json  vite.config.ts
docs/superpowers/plans/: 2026-06-23-window-state-persistence.md
docs/superpowers/specs/: 2026-06-23-window-state-persistence-design.md
electron/: main.ts  preload.js  tsconfig.json
electron/handlers/: fileLoader.ts  imageProvider.ts  settings.ts
electron/utils/: naturalSort.ts  zipHandler.ts
src/: App.vue  env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/archive/: mod.rs  rar_handler.rs  zip_handler.rs
src-tauri/src/commands/: file_loader.rs  image_provider.rs  mod.rs  settings.rs  window_state.rs
src-tauri/src/models/: image_entry.rs  mod.rs  settings.rs
src-tauri/src/utils/: sorter.rs
src/components/: DropZone.vue  ImageViewer.vue  Notification.vue  PageSlider.vue  SettingsPanel.vue  StatusBar.vue
src/composables/: useDragDrop.ts  useFullscreen.ts  useImageStore.ts  useKeyBindings.ts  usePageController.ts  useSettings.ts
src/types/: index.ts
src/utils/: keyCombo.ts
