[package]
name = "rust-image-viewer"
version = "1.0.0"
description = "A lightweight image viewer built with Rust + Tauri"
authors = ["you"]
edition = "2021"

[lib]
name = "rust_image_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
zip = "2"
unrar = "0.5"
image = "0.25"
base64 = "0.22"
dirs = "5"
